--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "gameplay",
     "version": "1.0.0",
     "orientation": "portrait",
+    "scheme": "gameplay",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
